Enable auto-merge and update settings on PRs
This enables the following features for pull requests:

- Enables the "Auto-merge" button: this allows for a PR to be merged as
  soon as the required checks and reviews pass.
- Enables the "Update branch" button: this allows merging the **base**
  branch into the PR branch from the UI.
- Enables automatic deletion of branches after a merge.

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -56,6 +56,16 @@ github:
     - api
     - syslog
 
+  # Pull Request settings:
+  # https://github.com/apache/infrastructure-asfyaml#pull-request-settings
+  pull_requests:
+    # allow auto-merge
+    allow_auto_merge: true
+    # enable updating head branches of pull requests
+    allow_update_branch: true
+    # auto-delete head branches after being merged
+    del_branch_on_merge: true
+
   # Enforce squashing while merging PRs.
   # Otherwise, the git log gets polluted severely.
   enabled_merge_buttons:
