Updated for review comments and failing test case
Signed-off-by: MichaelMorris <michael.morris@est.tech>

--- a/log4j-core-test/src/test/resources/config/MonitorResource/log4j.properties
+++ b/log4j-core-test/src/test/resources/config/MonitorResource/log4j.properties
@@ -15,5 +15,8 @@
 # limitations under the License.
 #
 monitorInterval = 30
+monitorResources.type = MonitorResources
+monitorResources.0.type = MonitorResource
 monitorResources.0.uri = file://path/to/external-file-1.txt
+monitorResources.1.type = MonitorResource
 monitorResources.1.uri = file://path/to/external-file-2.txt
