Upgraded Jackson from 2.x to 3.0.0-rc8

--- a/log4j-config-properties/pom.xml
+++ b/log4j-config-properties/pom.xml
@@ -38,7 +38,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <groupId>tools.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-properties</artifactId>
     </dependency>
 
