--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -51,6 +51,7 @@
     <!--
       ~ OSGi and JPMS options
       -->
+    <disruptor.support.range>[3.4,5)</disruptor.support.range>
     <bnd-multi-release>true</bnd-multi-release>
     <bnd-extra-package-options>
       <!-- Annotations only -->
@@ -58,7 +59,7 @@
       <!-- External optional dependencies -->
       com.conversantmedia.util.concurrent;resolution:=optional;
       com.fasterxml.jackson.*;resolution:=optional,
-      com.lmax.disruptor.*;resolution:=optional,
+      com.lmax.disruptor.*;version="${disruptor.support.range}";resolution:=optional,
       javax.activation;resolution:=optional,
       javax.jms;version="[1.1,3)";resolution:=optional,
       javax.mail.*;version="[1.6,2)";resolution:=optional,
