--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>org.apache.logging</groupId>
     <artifactId>logging-parent</artifactId>
-    <version>12.1.0</version>
+    <version>12.1.1</version>
     <relativePath />
   </parent>
 
@@ -279,7 +279,7 @@
   <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
     <connection>scm:git:https://github.com/apache/logging-log4j2.git</connection>
     <developerConnection>scm:git:https://github.com/apache/logging-log4j2.git</developerConnection>
-    <tag>rel/2.25.0</tag>
+    <tag>2.x</tag>
     <url>https://github.com/apache/logging-log4j2</url>
   </scm>
 
@@ -307,7 +307,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.25.0</revision>
+    <revision>2.26.0-SNAPSHOT</revision>
     <!-- Versions used on the site: no snapshots! -->
     <site-log4j-api.version>2.25.0</site-log4j-api.version>
     <site-log4j-core.version>2.25.0</site-log4j-core.version>
