--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>org.apache.logging</groupId>
     <artifactId>logging-parent</artifactId>
-    <version>12.1.0</version>
+    <version>12.1.1</version>
     <relativePath />
   </parent>
 
@@ -307,7 +307,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.25.0</revision>
+    <revision>2.25.1-SNAPSHOT</revision>
     <!-- Versions used on the site: no snapshots! -->
     <site-log4j-api.version>2.25.0</site-log4j-api.version>
     <site-log4j-core.version>2.25.0</site-log4j-core.version>
