--- a/log4j-parent/pom.xml
+++ b/log4j-parent/pom.xml
@@ -80,6 +80,7 @@
     <conversant.disruptor.version>1.2.15</conversant.disruptor.version>
     <disruptor.version>3.4.4</disruptor.version>
     <embedded-ldap.version>0.9.0</embedded-ldap.version>
+    <error-prone-annotations.version>2.38.0</error-prone-annotations.version>
     <felix.version>7.0.5</felix.version>
     <groovy.version>4.0.27</groovy.version>
     <guava.version>33.4.8-jre</guava.version>
@@ -1109,7 +1110,7 @@
             <dependency>
               <groupId>com.google.errorprone</groupId>
               <artifactId>error_prone_annotations</artifactId>
-              <version>${error-prone.version}</version>
+              <version>${error-prone-annotations.version}</version>
             </dependency>
             <dependency>
               <groupId>org.osgi</groupId>
