--- a/log4j-parent/pom.xml
+++ b/log4j-parent/pom.xml
@@ -866,6 +866,9 @@
                 <arg>-Alog4j.docgen.version=${project.version}</arg>
                 <arg>-Alog4j.docgen.description=${project.description}</arg>
                 <arg>-Alog4j.docgen.typeFilter.excludePattern=${log4j.docgen.typeFilter.excludePattern}</arg>
+                <!-- Provide arguments for the GraalVM processor -->
+                <arg>-Alog4j.graalvm.groupId=${project.groupId}</arg>
+                <arg>-Alog4j.graalvm.artifactId=${project.artifactId}</arg>
               </compilerArgs>
             </configuration>
 
